# oci-unpack

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
ci/: compare-image  custom-images  references  run-tests
ci/custom/: Dockerfile.chown  Dockerfile.links  Dockerfile.whiteouts
examples/: unpack.rs
src/: digest.rs  fs.rs  hex.rs  lib.rs  manifests.rs
src/downloader/: http.rs  manifests.rs  mime.rs  mod.rs  tests.rs
src/http/: mod.rs  tests.rs
src/reference/: mediatype.rs  mod.rs  parser.rs
src/unpacker/: event_handler.rs  extractor.rs  images.rs  layers.rs  manifests.rs  mod.rs
tests/: basics.rs  invalid_layers.rs
tests/common/: blobs.rs  mod.rs  registry.rs
