[package]
name = "oci-unpack"
version = "0.1.0"
edition = "2021"
authors = ["ayosec@gmail.com"]
license = "Apache-2.0"

description = "Download and unpack OCI layers."
keywords = ["bash"]

readme = "README.md"
documentation = "https://docs.rs/oci-unpack"
repository = "https://github.com/ayosec/oci-unpack"

[dependencies]
digest = { version = "0.10.7", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
thiserror = "1.0.64"
tiny_http = { version = "0.12.0", default-features = false }
ureq = "2.10.1"

[dev-dependencies]
clap = { version = "4.5.19", features = ["derive"] }
url = "2.5.2"
